--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <artifactId>employee-analysis</artifactId>
   <version>1.0-SNAPSHOT</version>
   <name>Employee Organization Analysis</name>
-  <description>nalyzes company's organizational structure to identify improvement opportunities</description>
+  <description>Analyzes company's organizational structure to identify improvement opportunities</description>
   <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>11</maven.compiler.source>
